[package]
name = "bettertan"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.102"
base64 = "0.22.1"
dioxus = { version = "0.6", features = ["desktop"] }
google-fonts = { version = "0.1.5" }
image = { version = "0.25.9", features = ["jpeg", "png", "webp", "gif", "bmp"] }
imageproc = "0.26.1"
ndarray = "0.17.2"
num_cpus = "1.17.0"
ort = "=2.0.0-rc.12"
paddle-ocr-rs = { path = "/home/credman0/Downloads/paddle-ocr-rs" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
tokio = "1.50.0"
